// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactFinder renders correctly 1`] = `
<div
  class="react-finder react-finder-container"
>
  <div
    class="react-finder-column"
  >
    <div
      class="react-finder-item"
    >
      <span>
        1 
        <span
          style="float:right;"
        >
          &gt;
        </span>
      </span>
    </div>
    <div
      class="react-finder-item"
    >
      <span>
        2 
      </span>
    </div>
    <div
      class="react-finder-item"
    >
      <span>
        3 
      </span>
    </div>
    <div
      class="react-finder-item"
    >
      <span>
        4 
        <span
          style="float:right;"
        >
          &gt;
        </span>
      </span>
    </div>
    <div
      class="react-finder-item"
    >
      <span>
        5 
      </span>
    </div>
  </div>
</div>
`;

exports[`ReactFinder renders correctly 2`] = `
<div
  class="react-finder react-finder-container"
>
  <div
    class="react-finder-column"
  >
    <div
      class="react-finder-item opened"
    >
      <span>
        1 
        <span
          style="float:right;"
        >
          &gt;
        </span>
      </span>
    </div>
    <div
      class="react-finder-item"
    >
      <span>
        2 
      </span>
    </div>
    <div
      class="react-finder-item"
    >
      <span>
        3 
      </span>
    </div>
    <div
      class="react-finder-item"
    >
      <span>
        4 
        <span
          style="float:right;"
        >
          &gt;
        </span>
      </span>
    </div>
    <div
      class="react-finder-item"
    >
      <span>
        5 
      </span>
    </div>
  </div>
  <div
    class="react-finder-column"
  >
    <div
      class="react-finder-item"
    >
      <span>
        1-1 
      </span>
    </div>
    <div
      class="react-finder-item"
    >
      <span>
        1-2 
      </span>
    </div>
    <div
      class="react-finder-item opened"
    >
      <span>
        1-3 
        <span
          style="float:right;"
        >
          &gt;
        </span>
      </span>
    </div>
    <div
      class="react-finder-item"
    >
      <span>
        1-4 
      </span>
    </div>
    <div
      class="react-finder-item"
    >
      <span>
        1-5 
      </span>
    </div>
  </div>
  <div
    class="react-finder-column"
  >
    <div
      class="react-finder-item selected"
    >
      <span>
        1-3-1 
      </span>
    </div>
  </div>
</div>
`;

exports[`ReactFinder renders correctly 3`] = `
<div
  class="react-finder react-finder-container"
>
  <div
    class="react-finder-column"
  >
    <div
      class="react-finder-item"
    >
      <span>
        1 
        <span
          style="float:right;"
        >
          &gt;
        </span>
      </span>
    </div>
    <div
      class="react-finder-item"
    >
      <span>
        2 
      </span>
    </div>
    <div
      class="react-finder-item"
    >
      <span>
        3 
      </span>
    </div>
    <div
      class="react-finder-item opened"
    >
      <span>
        4 
        <span
          style="float:right;"
        >
          &gt;
        </span>
      </span>
    </div>
    <div
      class="react-finder-item"
    >
      <span>
        5 
      </span>
    </div>
  </div>
  <div
    class="react-finder-column"
  >
    <div
      class="react-finder-item selected"
    >
      <span>
        4-1 
      </span>
    </div>
  </div>
</div>
`;
